--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="btn-solid-lg page-scroll" href="#instructor">Sobre</a>
+                    <a class="btn-solid-lg page-scroll">Regulamento </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="btn-solid-lg page-scroll" href="#register">Inscrever</a>
+                    <a class="btn-solid-lg page-scroll">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn-solid-lg page-scroll" href="#description">Regulamento</a>
+                    <a class="btn-solid-lg page-scroll">Inscrever </a>
                 </li>
 
             
@@ -308,7 +308,7 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Desenvolvimento</h4>
-                            <p>Venha desenvolver as suas técnicas em um ambiente controlado,venha fazer parte do SAEH.</p>
+                            <p>Venha desenvolver as suas técnicas em um ambiente controlado,venha fazer parte do JTA.</p>
                         </div>
                     </div>
                    
